--- a/views/dashboard.hbs
+++ b/views/dashboard.hbs
@@ -1,4 +1,12 @@
-<h1 class="text-center">Tech Blog</h1>
+<form action="/dashboard" method="POST">
+    <h1>Create a Post!</h1>
+    {{#each errors}}
+        <p class="error text-center">{{this}}</p>
+    {{/each}}
+    <input type="text" name="title" placeholder="Title your Post" required>
+    <input type="text" name="text" placeholder="Write your Post" required>
+    <button type="submit">Send Post</button>
+</form>
 
 <section class="column align-center post-output">
     {{#each posts}}
