--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tech Blog</title>
-     <!-- This is a server route from the public directory -->
     <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
@@ -14,7 +13,7 @@
         <nav class="row align-center">
             {{#if user}}
                 <p>Welcome, <span>{{user.username}}</span>!</p>
-                <a href="/post">Create a Post</a>
+                <a href="/dashboard">Dashboard</a>
                 <span>or</span>
                 <a href="/auth/logout">Log Out</a>
             {{else}}
