--- a/views/login.hbs
+++ b/views/login.hbs
@@ -1,5 +1,5 @@
 <form action="/auth/login" method="POST">
-  <h1>Log In</h1>
+  <h1 class="accent">Log In</h1>
 
   {{#each errors}}
     <p class="error text-center">{{this}}</p>
