--- a/public/css/style.css
+++ b/public/css/style.css
@@ -18,7 +18,7 @@ a:hover:not(:first-child) {
     text-decoration: underline;
 }
 
-h1, h2, h3, h4, h5, h6 {
+.accent {
     color: rgb(38, 190, 190);
 }
 
@@ -43,7 +43,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 header {
-    background-color: rgb(91, 92, 92);
+    background-color: rgb(73, 73, 73);
     padding: 10px 5%;
     color: white;
     margin-bottom: 35px;
@@ -51,10 +51,6 @@ header {
 
 header nav > *:not(:last-child) {
     margin-right: 8px;
-}
-
-nav span {
-    color: rgb(38, 190, 190);
 }
 
 form {
@@ -71,7 +67,6 @@ form > * {
 
 form h1 {
     text-align: center;
-    color: rgb(38, 190, 190);
 }
 
 form p.error {
@@ -79,21 +74,38 @@ form p.error {
 }
 
 .post-output {
-    margin-top: 30px;
+    margin: 30px 50px 0;
 }
+
+.post-output .box {
+    border: 2px solid black;
+    margin: 20px 0;
+    display: flex;
+    flex-direction: column;
+    width: 60%
+}    
+
+.post-output .box > * {
+    padding: 10px 100px;
+} 
 
 .post {
     margin-bottom: 15px;
 }
 
-.post h2 {
-    margin-right: 100px;
-}
-
 .post h3 {
     margin-bottom: 15px;
+    align-self: flex-start;
 }
 
-.post p:first-child {
-    margin-right: 25px;
+.post-heading {
+    background-color: rgb(59, 59, 59);
+}
+
+.post h2 {
+    align-self: flex-start;
+}
+
+.post-author {
+    align-self: flex-end;
 }
