--- a/views/dashboard.hbs
+++ b/views/dashboard.hbs
@@ -1,5 +1,5 @@
 <form action="/dashboard" method="POST">
-    <h1>Create a Post!</h1>
+    <h1 class="accent">Create a Post!</h1>
     {{#each errors}}
         <p class="error text-center">{{this}}</p>
     {{/each}}
@@ -11,9 +11,9 @@
 <section class="column align-center post-output">
     {{#each posts}}
         <div class="box post text-center">
-            <div class="row text-center justify-between align-center">
-                <h2>{{title}}</h2>
-                <p>Posted by {{author.username}} on {{date}}</p>
+            <div class="post-heading row text-center justify-between align-center">
+                <h2 class="accent">{{title}}</h2>
+                <p class="post-author accent">Posted by {{author.username}} on {{date}}</p>
             </div>
             <h3>{{text}}</h3>
         </div>
