--- a/views/register.hbs
+++ b/views/register.hbs
@@ -1,5 +1,5 @@
 <form action="/auth/register" method="POST">
-    <h1>Talk Tech Now!</h1>
+    <h1 class="accent">Talk Tech Now!</h1>
     {{#each errors}}
         <p class="error text-center">{{this}}</p>
     {{/each}}
