--- a/public/css/style.css
+++ b/public/css/style.css
@@ -7,6 +7,9 @@
 body {
     font-family: sans-serif;
     background-color: rgb(252, 228, 200);
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
 }
 
 a {
@@ -73,6 +76,17 @@ form p.error {
     color: red;
 }
 
+.popup {
+    display: none;
+    position: absolute;
+    background-color: #333;
+    color: #fff;
+    padding: 10px;
+    border-radius: 5px;
+    top: 10px;
+    left: 10px;
+}
+
 .post-output {
     margin: 30px 50px 0;
 }
@@ -108,4 +122,8 @@ form p.error {
 
 .post-author {
     align-self: flex-end;
+}
+
+footer {
+    margin-top: auto;
 }
