--- a/views/dashboard.hbs
+++ b/views/dashboard.hbs
@@ -1,11 +1,12 @@
-<form action="/dashboard" method="POST">
+<form id="postForm" action="/dashboard" method="POST">
     <h1 class="accent">Create a Post!</h1>
     {{#each errors}}
-        <p class="error text-center">{{this}}</p>
+    <p class="error text-center">{{this}}</p>
     {{/each}}
     <input type="text" name="title" placeholder="Title your Post" required>
-    <input type="text" name="text" placeholder="Write your Post" required>
-    <button type="submit">Send Post</button>
+    <input type="text" id="inputField" name="text" placeholder="Write your Post" required>
+    <p>Character count: <span id="charCount">0</span>/500</p>
+    <button id="submitBtn" type="submit">Send Post</button>
 </form>
 
 <section class="column align-center post-output">
