--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -28,5 +28,13 @@
     </header>
 
     {{{body}}}
+
+    <footer class="text-center column align-center">
+        <p>© 2023</p>
+        <p>Hunter Muratore</p>
+    </footer>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js" integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="/js/index.js"></script>
 </body>
 </html>
