--- a/public/css/style.css
+++ b/public/css/style.css
@@ -17,7 +17,7 @@ a {
     text-decoration: none;
 }
 
-a:hover:not(:first-child) {
+a:hover {
     text-decoration: underline;
 }
 
@@ -111,6 +111,19 @@ form p.error {
 
 .post-author {
     align-self: flex-end;
+}
+
+.options button {
+    background: transparent;
+    border: none;
+    margin: 0 4px;
+    color: rgb(38, 190, 190);
+    transition: ease-in-out .3s;
+}
+
+.options button:hover {
+    color: #3c3c3c;
+
 }
 
 footer {
