--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tech Blog</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
@@ -15,6 +16,7 @@
         {{/if}}
 
         <nav class="row align-center">
+                <a href="/">Home</a>
             {{#if user}}
                 <a href="/dashboard">Dashboard</a>
                 <span class="accent">or</span>
