allow users to delete posts. Added better event delegation

--- a/views/dashboard.hbs
+++ b/views/dashboard.hbs
@@ -21,8 +21,8 @@
             <input type="text" class="edit-post-input" style="display: none;">
         </div>
         <div class="options row">
-            <button id="updateBtn" data-post-id="{{id}}"><i class="fa-solid fa-pen-nib fa-xl"></i></button>
-            <button id="deleteBtn" data-post-id="{{id}}"><i class="fa-solid fa-trash-can fa-xl"></i></button>
+            <button class="updateBtn" data-post-id="{{id}}"><i class="fa-solid fa-pen-nib fa-xl"></i></button>
+            <button class="deleteBtn" data-post-id="{{id}}"><i class="fa-solid fa-trash-can fa-xl"></i></button>
         </div>
     </div>
     {{/each}}
